# lstm_exchange_predictor

./: .gitignore  README.md  pyproject.toml
notebooks/: algopack_baseline.ipynb  anti_collapse_experiment.ipynb  baselines_comparison.ipynb  consensus_experiment.ipynb  data_preparation.ipynb  diploma_results.ipynb  itransformer_ensemble_aci.ipynb  lightgbm_meta_ensemble.ipynb  lightgbm_meta_labeling.ipynb  lightgbm_only.ipynb  signal_existence.ipynb  sizing_experiments.ipynb  threshold_strategy.ipynb  training_pipeline.ipynb
scripts/: 01_download_data.py  02_build_features.py  03_train_model.py  04_backtest.py  05_run_server.py  06_smoke_live.py  07_resume_download.py  08_download_algopack.py  08_download_algopack_extended.py  _bootstrap.py
tests/: conftest.py  test_adaptive_conformal.py  test_advanced_features.py  test_algopack.py  test_anti_collapse_stack.py  test_audit_fixes.py  test_backtest.py  test_batches.py  test_calendars_dividends.py  test_classification.py  test_concurrent_ensemble.py  test_conformal.py  test_consensus.py  test_cross_sectional.py  test_dedup_multi_metric.py  test_ensemble.py  test_ensemble_pipeline.py  test_features.py  test_futoi_features.py  test_hi2_no_leakage.py  test_itransformer.py  test_joint_thresholds.py  test_label_correctness.py  test_lgbm_pipeline.py  test_linear_baselines.py  test_meta_labeling.py  test_model.py  test_pipeline_persistence.py  test_quant_losses.py  test_revin.py  test_serving.py  test_sizing_and_exits.py  test_strategy.py  test_swa.py  test_threshold_strategies.py  test_tier1_2_fixes.py  test_timexer.py
(+73 files in other folders)
